# testing-actions

./: .env.testing.docker  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docker_images/testing/: Dockerfile.testing  ci.env.sh  entrypoint.sh
src/: main.py  settings.py
src/tests/: pytest.ini  test_init.py
