[project]
name = "testing-actions"
version = "0.1.0"
description = ""
authors = [
    {name = "ronihdzz",email = "ronaldo.runing_@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry]
package-mode = false
